--- a/requirements.txt
+++ b/requirements.txt
@@ -9,21 +9,16 @@ backcall==0.2.0
 bayesian-optimization==1.2.0
 bleach==3.1.5
 blinker==1.4
-boto3 @ file:///tmp/build/80754af9/boto3_1596840659104/work
-botocore @ file:///tmp/build/80754af9/botocore_1596824275563/work
 brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1596822027882/work
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1594141588948/work
 colorama==0.4.3
 coremltools @ git+https://github.com/apple/coremltools@9074033980e26657a3e94dfe6dcc5efb235f31b4
 cryptography==2.9.2
 cycler==0.10.0
 cytoolz==0.10.1
-dask @ file:///tmp/build/80754af9/dask-core_1596748257051/work
 decorator==4.4.2
 defusedxml==0.6.0
 docutils==0.15.2
@@ -33,43 +28,31 @@ Flask==1.1.2
 Flask-RESTful==0.3.8
 future==0.18.2
 gast==0.2.2
-google-auth @ file:///tmp/build/80754af9/google-auth_1594357566944/work
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.27.2
 gym==0.17.2
 h5py==2.10.0
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
 imagesize==1.2.0
 imantics==0.1.12
 imgaug==0.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
-jedi @ file:///C:/ci/jedi_1596472767194/work
 Jinja2==2.11.2
-jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kaggle==1.5.6
 Keras==2.3.1
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing==1.1.0
-keras2onnx==1.7.0
 kiwisolver==1.2.0
 labelme2coco==0.1.2
-lxml @ file:///C:/ci/lxml_1594826938446/work
 Markdown==3.1.1
 mkl-fft==1.1.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 mpmath==1.1.0
 nbformat==5.0.7
-networkx @ file:///tmp/build/80754af9/networkx_1594377231366/work
 oauthlib==3.1.0
 olefile==0.46
 onnx==1.5.0
@@ -80,17 +63,16 @@ opt-einsum==3.1.0
 packaging==20.4
 pandocfilters==1.4.2
 parso==0.7.0
-
 pixellib==0.3.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+pycocotools @ git+https://github.com/philferriere/cocoapi.git@2929bd2ef6b451054755dfd7ceb09278f935f7ad#subdirectory=PythonAPI
 pyglet==1.5.0
 Pygments==2.6.1
 PyJWT==1.7.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.7
 PyQt5==5.12.3
 PyQt5-sip==4.19.18
@@ -105,9 +87,7 @@ pywin32==227
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.1
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
 QtPy==1.9.0
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 requests-oauthlib==1.3.0
 rsa==4.0
 scikit-image==0.16.2
@@ -130,13 +110,11 @@ text-unidecode==1.3
 tf2onnx==1.5.3
 toolz==0.10.0
 tornado==6.0.4
-tqdm @ file:///tmp/build/80754af9/tqdm_1596810128862/work
 traitlets==4.3.3
 typing==3.7.4.3
 typing-extensions==3.7.4.3
 urllib3==1.25.9
 waitress==1.4.4
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==0.16.1
 widgetsnbextension==3.5.1
