--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ gast==0.2.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.27.2
+gunicorn==20.0.4
 gym==0.17.2
 h5py==2.10.0
 imagesize==1.2.0
