--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
 onnx==1.5.0
+opencv-contrib-python==4.4.0.42
 opencv-python-headless==4.4.0.42
 pixellib==0.3.0
 scikit-image==0.16.2
