--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-astor==0.8.0
-attr==0.3.1
-attrs==19.3.0
-Babel==2.8.0
-backcall==0.2.0
-bleach==3.1.5
-blinker==1.4
-click==7.1.2
-fire==0.3.1
 Flask==1.1.2
-Flask-RESTful==0.3.8
-gunicorn==20.0.4
-h5py==2.10.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Keras==2.3.1
-Keras-Preprocessing==1.1.0
-Markdown==3.1.1
-MarkupSafe==1.1.1
-numpy==1.18.5
-olefile==0.46
+Flask-RESTful
+gunicorn
+Keras
 opencv-contrib-python-headless
-pixellib==0.3.0
-scikit-image==0.16.2
-tensorflow==2.0.0
-Werkzeug==0.16.1
+pixellib
+tensorflow
+
 
