--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,69 @@
+absl-py==0.10.0
+aniso8601==8.0.0
+appdirs==1.4.4
+astunparse==1.6.3
+attrs==20.2.0
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+cycler==0.10.0
+decorator==4.4.2
+distlib==0.3.1
+filelock==3.0.12
 Flask==1.1.2
-Flask-RESTful
-gunicorn
-Keras
-opencv-contrib-python-headless
-pixellib
-tensorflow
-
-
+Flask-RESTful==0.3.8
+gast==0.3.3
+google-auth==1.21.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.32.0
+gunicorn==20.0.4
+h5py==2.10.0
+idna==2.10
+imageio==2.9.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+labelme2coco==0.1.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.1
+networkx==2.5
+numpy==1.18.5
+oauthlib==3.1.0
+opencv-contrib-python-headless==4.4.0.42
+opt-einsum==3.3.0
+Pillow==7.2.0
+pixellib==0.3.0
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+PyWavelets==1.1.1
+PyYAML==5.3.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-image==0.17.2
+scipy==1.4.1
+six==1.15.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+tifffile==2020.9.3
+urllib3==1.25.10
+virtualenv==20.0.30
+Werkzeug==1.0.1
+wincertstore==0.2
+wrapt==1.12.1
